<resources>
    <string name="app_name">Practica1</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="calculate">Calculate</string>
    <string name="reCalculate">Re-calculate</string>
    <string name="your_bmi">Tu IMC</string>

    <string name="error">Error</string>

    <string name="title_underweight">Underweight</string>
    <string name="title_normal">Normal</string>
    <string name="title_overweight">Overweight</string>
    <string name="title_obesity">Obesity</string>
    <string name="description">At vero eos et accusam et justo duo dolores et ea rebum</string>
    <string name="to_do">to do</string>
    <string name="category">category</string>
    <string name="tasks">tasks</string>
    <string name="add_your_task">Add your task</string>
    <string name="business">Business</string>
    <string name="personal">Personal</string>
    <string name="other">Other</string>
    <string name="add_task">Add task</string>
    <string name="intelligence">Intelligence</string>
    <string name="strength">Strength</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>

</resources>