<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superheroApp.DetailSuperheroActivity">


    <ImageView
        android:id="@+id/ivSuperheroDetail"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="235dp"
        app:cardCornerRadius="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperheroNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAllCaps="true"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="Name" />

            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                tools:text="Real Name" />

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="12sp"
                tools:text="Publisher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:id="@+id/vIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_intelligence" />

                <View
                    android:id="@+id/vStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_strength" />

                <View
                    android:id="@+id/vSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_speed" />

                <View
                    android:id="@+id/vDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_durability" />

                <View
                    android:id="@+id/vPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_power" />

                <View
                    android:id="@+id/vCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_stat_combat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/intelligence"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/strength"
                    android:textAlignment="center"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/speed"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/durability"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/power"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:text="@string/combat"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>